<resources>
    <string name="app_name">EmailDemo</string>
    <string name="login_title">登陆</string>
    <string name="login_input_user_name">请输入邮箱</string>
    <string name="login_input_pass_world">请输入密码</string>
    <string name="login">登陆</string>
    <string name="loading">加载中,请稍后...</string>
    <string name="home_page">首页</string>
    <string name="home_page_all_email">全部邮件</string>
    <string name="home_page_read_email">已读邮件</string>
    <string name="home_page_not_read_email">未读邮件</string>
    <string name="detail">详情</string>
    <string name="mail_content">邮件内容</string>
    <string name="menu_mail_content_replay">回复</string>
    <string name="mail_replay">回复邮件</string>
    <string name="menu_mail_replay_send">发送</string>
    <string name="mail_replay_sendr">发件人:</string>
    <string name="mail_replay_receivers">收件人:</string>
    <string name="mail_replay_subject">主题:</string>
    <string name="input_mail_content">请输入内容</string>
    <string name="send_mail">邮件发送中...</string>
    <string name="mail_attachment">添加附件</string>
    <string name="down_attachment">确认要下载吗?</string>
    <string name="cancle">取消</string>
    <string name="ok">确认</string>
    <string name="no_down">忽略</string>
    <string name="sure_delete">确认要删除吗?</string>
    <string name="qq_login">QQ登陆</string>
    <string name="wangyi_login">网易邮箱登陆</string>

</resources>
