<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/home_page_all_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_height"
        android:layout_marginEnd="@dimen/common_margin_right"
        android:layout_marginStart="@dimen/common_margin_left"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/home_page_all_email"
        android:textSize="@dimen/fong_normal"
        />


    <TextView
        android:id="@+id/home_page_read_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_height"
        android:layout_marginEnd="@dimen/common_margin_right"
        android:layout_marginStart="@dimen/common_margin_left"
        android:layout_marginTop="@dimen/common_margin_top"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/home_page_read_email"
        android:textSize="@dimen/fong_normal"
        />


    <TextView
        android:id="@+id/home_page_not_read_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_height"
        android:layout_marginEnd="@dimen/common_margin_right"
        android:layout_marginStart="@dimen/common_margin_left"
        android:layout_marginTop="@dimen/common_margin_top"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="@string/home_page_not_read_email"
        android:textSize="@dimen/fong_normal"
        />

</LinearLayout>